@@ -3,12 +3,15 @@
 General
  • Enabled ground deformation
  • Removed reverse move
- • Removed air collisions for bombers
  • Wreckage/heaps have the same HP as regular unit HP (~33% increase)
  • Increased maxslope for all units 50% (the slope it allows to be build on)
  • Units gain xp (ranks) faster, also relatively more health/firerate compared the the same old xp
- • Air units (liche/krow exluded): +30%: cost, health, damage, buildpower. Fighters +15% speed
+
+Air/AA: Goal: fewer units, longer lasting
+ • Air units (fighters/liche/krow exluded): +30%: cost, health, damage, buildpower.
+ • Fighters cost: +30%, health: +60%, damage: -25%, speed: +15%, manouverability: +15%
  • AA range increased 6%
+ • Removed air collisions for bombers
 
 Units
  • T1 metal extractors use 3 Energy to operate, also slightly reduced buildprice
